# ConnectedWeatherStation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: cjson.cmake  freertos.cmake  lvgl.cmake  lwip.cmake  sdk.cmake  toolchain-arm-none-eabi.cmake
source/: CMakeLists.txt  main.c
source/app/: CMakeLists.txt
source/app/displayController/: CMakeLists.txt  displayController.c  displayController.h  lvglWrapper.c  lvglWrapper.h
source/app/dns/: CMakeLists.txt  dns_resolver.c  dns_resolver.h
source/app/http/: CMakeLists.txt  httpClient.c  httpClient.h  httpSessionMgr.c  httpSessionMgr.h
source/app/logger/: CMakeLists.txt  logger.c  logger.h
source/app/mqttClient/: CMakeLists.txt  mqttClient.c  mqttClient.h
source/app/networkMgr/: CMakeLists.txt  networkMgr.c  networkMgr.h
source/app/sensor/: CMakeLists.txt  sen55.c  sen55.h
source/app/timeSync/: CMakeLists.txt  timeSync.c  timeSync.h
source/board/: CMakeLists.txt
source/board/inc/: FreeRTOSConfig.h  error.h  gpio.h  i2c.h  ili9341.h  lv_conf.h  lwipopts.h  network.h  rtc.h  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  usart.h
source/board/src/: clock.c  error.c  ethernetif.c  gpio.c  i2c.c  ili9341.c  lwip.c  network.c  rtc.c  spi.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  syscalls.c  sysmem.c  system_stm32f7xx.c  usart.c
